--- a/style.css
+++ b/style.css
@@ -56,3 +56,11 @@ input:focus{
 .image-full{
     width: calc(100% - 20px);
 }
+/* Spinner */
+#loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 50;
+    transform: translate(-50%, -50%);
+}
