--- a/style.css
+++ b/style.css
@@ -66,3 +66,9 @@ input:focus{
     background-color: #ff4800;
     color: #FFF;
 }
+/* Search result count */
+#result-parent p{
+    width: fit-content;
+    margin-left: auto;
+    border-radius: 8px;
+}
